--- a/src/style/var.less
+++ b/src/style/var.less
@@ -236,7 +236,8 @@
 @coupon-list-empty-tip-line-height: 20px;
 
 // Dialog
-@dialog-width: 85%;
+@dialog-width: 320px;
+@dialog-small-screen-width: 90%;
 @dialog-font-size: @font-size-lg;
 @dialog-transition: @animation-duration-base;
 @dialog-border-radius: @border-radius-md;
